# vulkan-tutorial-ash-sdl

./: .env  Cargo.toml  README.md  docs_notes.org  justfile  notes.org  rust-toolchain.toml  todo.org  todo_generating_vertex.org
.cargo/: config.toml
examples/: 00_window.rs  01_instance.rs  basic_triangle.rs  depth_texture.rs  pixel_rick.rs  viking_room.rs
scripts/: pre-commit.sh
shaders/compiled/: basic_triangle.frag.spv  basic_triangle.json  basic_triangle.vert.spv  depth_texture.frag.spv  depth_texture.json  depth_texture.spv  depth_texture.vert.spv  pixel_rick.frag.spv  pixel_rick.json  pixel_rick.vert.spv  triangle.json  triangle.spv
shaders/source/: basic_triangle.shader.slang  basic_triangle.slang  depth_texture.shader.slang  depth_texture.slang  mvp.slang  pixel_rick.slang  triangle.frag.glsl  triangle.slang  triangle.vert.glsl
src/: app.rs  game.rs  generated.rs  lib.rs  main.rs  renderer.rs  shader_watcher.rs  shaders.rs  util.rs
src/game/: mvp.rs  traits.rs  vertex.rs
src/renderer/: config.rs  debug.rs  gpu_write.rs  pipeline.rs  platform.rs  texture.rs  uniform_buffer.rs  vertex_description.rs
src/shaders/: atlas.rs  build_tasks.rs  descriptor_set_reflection.rs  json.rs  reflection.rs  reflection_example.cpp
src/shaders/atlas/: depth_texture.rs
src/shaders/json/: entry_points.rs  parameters.rs  pipeline_builders.rs
src/shaders/reflection/: entry_points.rs  parameters.rs  pipeline_layout.rs
src/shaders/snapshots/: ash_sdl_vulkan_tutorial__shaders__build_tasks__tests__generated_files-2.snap  ash_sdl_vulkan_tutorial__shaders__build_tasks__tests__generated_files-3.snap  ash_sdl_vulkan_tutorial__shaders__build_tasks__tests__generated_files.snap  ash_sdl_vulkan_tutorial__shaders__build_tasks__tests__generated_files@generated.rs.snap  (+11 more)
src/snapshots/: ash_sdl_vulkan_tutorial__game__tests__make_mvp_matrices_col_major.snap  ash_sdl_vulkan_tutorial__game__tests__make_mvp_matrices_row_major.snap  ash_sdl_vulkan_tutorial__shaders__tests__depth_texture_reflection.snap
templates/: shader_atlas.rs.askama  shader_atlas_entry.rs.askama  shader_atlas_entry_structs.rs.askama
(+2 files in other folders)
