[package]
name = "ash-sdl-vulkan-tutorial"
version = "0.1.0"
edition = "2024"
default-run = "ash-sdl-vulkan-tutorial"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
glam = "0.30.3"
image = "0.25.6"
log = "0.4.27"
pretty_env_logger = "0.5.0"
sdl3 = { version = "0.14.29", features = ["ash"] }
tobj = "4.0.3"

notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
shader-slang = "0.1.0"


[profile.dev.package."*"]
opt-level = 3
