[package]
name = "ash-sdl-vulkan-tutorial"
version = "0.1.0"
edition = "2024"
default-run = "ash-sdl-vulkan-tutorial"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
glam = "0.30.3"
image = "0.25.6"
log = "0.4.27"
pretty_env_logger = "0.5.0"
# using build-from-source-static for windows
# sdl3 = { version = "0.14.29", features = ["ash"] }
sdl3 = { version = "0.14.29", features = ["ash", "build-from-source-static"] }
tobj = "4.0.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

notify = "8.1.0"
shader-slang = "0.1.0"
anyhow = "1.0.100"

[dev-dependencies]
insta = { version = "1.43.2", features = ["json"] }

[profile.dev.package."*"]
opt-level = 3
